[package]
name = "unwrap_let"
version = "0.1.0"
edition = "2021"
authors = ["ChainLight Team <chainlight@theori.io>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/chainlight-io/unwrap_let"
description = "A Rust macro for quickly unwrapping a refutable pattern."
categories = ["rust-patterns", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
